# apps/server/src/app.module.ts
@@ -4,6 +4,7 @@ import { ConfigModule } from '@nestjs/config';
 import { validateEnvironment } from './config/env';
 import { PrismaModule } from './database/prisma.module';
 import { HealthModule } from './health/health.module';
+import { SubscriptionsModule } from './subscriptions/subscriptions.module';
 
 @Module({
   imports: [
@@ -14,6 +15,7 @@ import { HealthModule } from './health/health.module';
     }),
     PrismaModule,
     HealthModule,
+    SubscriptionsModule,
   ],
 })
 export class AppModule {}
